Aditional work on review comments